test_regress/t/t_array_pattern_bad.out
%Error: t/t_array_pattern_bad.v:24:18: Assignment pattern key 'valids' not found as member
                                     : ... note: In instance 't'
   24 |                  valids: '1};
      |                  ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
